Remove proprietary datasets, replace with dummy sample data
- Removed ACP Ordinance data (9,019 records - GoodPower proprietary)
- Removed ANCHOR Data Dictionary (GoodPower proprietary)
- Removed Priority Counties data (GoodPower proprietary)
- Updated sample_county_sites.geojson with generic dummy data
- Updated .gitignore to exclude proprietary datasets and internal tools
- Keep only public-facing schema and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ docs/DEEP_RESEARCH_BRIEF.md
 docs/ARMY_PROJECT_REVIEW.md
 docs/RDF_V1_ENHANCED_SCHEMA.md
 
+# Exclude proprietary datasets (GoodPower internal data)
+datasets/ACP_*.csv
+datasets/ANCHOR_*.xlsx
+datasets/Priority*Counties*.pdf
+datasets/Priority*Counties*.xlsx
+datasets/Priority*Counties*.csv
+
 # Exclude parsed data
 tools/*_parsed.json
 
